--- a/src/pages_howit.html
+++ b/src/pages_howit.html
@@ -1,5 +1,5 @@
-{% set title = "Home" %}
-{% set bodyClass = "is-home" %}
+{% set title = "How it works" %}
+{% set bodyClass = "is-how it" %}
 
 {% extends "_html/_base/_layouts/_default_pages_howit.html" %}
 
